guides/pd-disaggregation/httproute.gke.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-pd-disaggregation
  namespace: llm-d-pd
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: infra-pd-inference-gateway
  rules:
    - backendRefs:
      - group: inference.networking.k8s.io
        kind: InferencePool
        name: gaie-pd
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
